tests/exposure_test_with_anp_2_w_np/policies.yaml
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
  name: exposure-allow-with-rep-peer-example
spec:
  priority: 10
  subject:
    namespaces:
      matchLabels:
        kubernetes.io/metadata.name: hello-world
  ingress:
  - name: "allow-tcp-80-ingress-from-slytherin"  # exposed to slytherin on ingress
    action: "Allow"
    from:
    - namespaces:
        matchLabels:
            conformance-house: slytherin
    ports:
    - portNumber:
        port: 80
        protocol: TCP
  egress:
  - name: "allow-tcp-80-egress-to-slytherin" # exposed to slytherin on egress
    action: "Allow" 
    to:
    - namespaces:
        matchLabels:
            conformance-house: slytherin
    ports:
    - portNumber:
        port: 80
        protocol: TCP
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: expose-app-a
  namespace: hello-world
spec:
  podSelector:
    matchLabels:
      app: a-app
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          conformance-house: gryffindor
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          conformance-house: gryffindor
